cabal-version:      3.8
name:               atcoder-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             flowerhill
maintainer:         tomoki19880910@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable atcoder-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      mtl,
                      bytestring,
                      vector,
                      containers,
                      array,
                      vector-algorithms,
                      unordered-containers,
                      random,
                      QuickCheck,
                      doctest,
                      hspec,
                      split,
                      heaps,
                      multiset,
                      fgl,
                      extra,
                      mutable-containers,
                      unordered-containers,
                      --ac-library-hs,
    hs-source-dirs:   app
    default-language: Haskell2010
