cabal-version:      3.8
name:               atcoder-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             flowerhill
maintainer:         tomoki19880910@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

-- ライブラリ（src/配下のモジュール）
library
    exposed-modules:  Lib
                      Input
                      Util
                      MyArray
                      MyMArray
                      BSearchArray
                      BSearchVector
                      Encode
                      Graph
                      MyList
                      IntMultiSet
                      Dijkstra
                      UnionFindIOUArray
                      WUnionFind
    hs-source-dirs:   src
    default-language: Haskell2010
    
    ghc-options:      -O2 -Wall
    
    build-depends:    base,
                      mtl,
                      bytestring,
                      vector,
                      containers,
                      array,
                      vector-algorithms,
                      unordered-containers,
                      random,
                      QuickCheck,
                      doctest,
                      hspec,
                      split,
                      heaps,
                      multiset,
                      fgl,
                      extra,
                      mutable-containers,
                      unordered-containers,
                      ac-library-hs,

executable main
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    
    ghc-options:      -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
    
    build-depends:    base,
                      extra,
                      atcoder-haskell,
                      bytestring,
                      vector,
                      containers,
                      array,

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   spec

    other-modules:
        LibSpec

    default-language: Haskell2010

    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

    build-depends:    QuickCheck,
                      base,
                      atcoder-haskell,
                      hspec

    build-tool-depends:
        hspec-discover:hspec-discover

executable bundle
    main-is:          Bundle.hs
    hs-source-dirs:   tools
    default-language: Haskell2010

    ghc-options:      -O2 -Wall

    build-depends:    base,
                      text,
                      filepath,
                      directory,
                      containers
